fix button stretching

--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -19,7 +19,7 @@
   }
   .btn-outline {
       border-color: currentcolor;
-      display: block;
+      display: inline-block;
       width: fit-content;
       margin-top: 20px;
       line-height: 1;
